--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,19 @@
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "cleanUrls": true,
     "rewrites": [{
-        "source": "/",
-        "destination": "/"
+        "source": "/share-target",
+        "destination": "/share-target"
+    }],
+    "headers": [{
+        "source": "/sw.js",
+        "headers": [{
+                "key": "Service-Worker-Allowed",
+                "value": "/"
+            },
+            {
+                "key": "Cache-Control",
+                "value": "public, max-age=0, must-revalidate"
+            }
+        ]
     }]
 }
