--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,9 @@
         "sizes": "512x512"
     }],
     "share_target": {
-        "action": "/?share-target",
-        "method": "GET",
-        "enctype": "application/x-www-form-urlencoded",
+        "action": "/share-target",
+        "method": "POST",
+        "enctype": "multipart/form-data",
         "params": {
             "title": "title",
             "text": "text",
